--- a/MissileCommand/MissileCommand/MissileCommand.csproj
+++ b/MissileCommand/MissileCommand/MissileCommand.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building.cs" />
     <Compile Include="EnemyMissile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
