--- a/MissileCommand/MissileCommand/MissileCommand.csproj
+++ b/MissileCommand/MissileCommand/MissileCommand.csproj
@@ -72,6 +72,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Building.cs" />
+    <Compile Include="PlayerMissiles.cs" />
+    <Compile Include="Site.cs" />
     <Compile Include="EnemyMissile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
