--- a/MissileCommand/MissileCommand/MissileCommand.csproj
+++ b/MissileCommand/MissileCommand/MissileCommand.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="Airplane.cs" />
     <Compile Include="Building.cs" />
+    <Compile Include="Explosion.cs" />
     <Compile Include="PlayerMissiles.cs" />
     <Compile Include="Site.cs" />
     <Compile Include="EnemyMissile.cs" />
