added a ton of stuff and made it an actual game basically. still kind of weird and rounds can either be incredibly easy or literally impossible, but nevertheless a game

--- a/MissileCommand/MissileCommand/MissileCommand.csproj
+++ b/MissileCommand/MissileCommand/MissileCommand.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="Airplane.cs" />
     <Compile Include="Building.cs" />
+    <Compile Include="City.cs" />
     <Compile Include="Explosion.cs" />
     <Compile Include="PlayerMissiles.cs" />
     <Compile Include="Site.cs" />
